# PengEngine

./: .gitignore  CMakeLists.txt  cmake-format.yaml
src/core/: asset.h  logger.cpp  peng_engine.h  subsystem_definition.h
src/demo/: demo_controller.cpp  demo_main.cpp
src/demo/gravity/: rock.cpp
src/entities/: camera.cpp
src/math/: concepts.h  matrix4x4.h  vector2.h  vector3.h  vector4.h
src/memory/: shared_ref.h
src/rendering/: draw_call_tree.cpp  sprite_batcher.cpp  texture.h  utils.h  window_subsystem.cpp
src/threading/: worker_thread.cpp
src/utils/: check.h  event.h  timing.cpp
